# etf-factor

./: .gitmodules  README.md  environment.yml  factors.py  main.py  pyproject.toml
scripts/: compute_factors.py  init_factor_db.py
sql/: schema.sql
src/etf_factor/: cli.py  compute.py  config.py  db.py  factors.py  market_data.py  storage.py
tests/: test_factor_identity.py
